homography to have real world coordinates

--- a/CV_aruco.ipynb
+++ b/CV_aruco.ipynb
@@ -2,82 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "368be111-8654-4f10-84ad-9bc9488aaf7a",
+   "execution_count": 6,
+   "id": "ecedb05c-cfda-449e-b23d-076951f7ba86",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+      "Requirement already satisfied: opencv-contrib-python in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.11/site-packages (4.12.0.88)\n",
+      "Requirement already satisfied: numpy<2.3.0,>=2 in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.11/site-packages (from opencv-contrib-python) (2.2.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "# --- ArUco dictionary (DICT_4X4_50) ---\n",
-    "aruco_dict = cv2.aruco.getPredefinedDictionary(cv2.aruco.DICT_4X4_50)\n",
-    "aruco_params = cv2.aruco.DetectorParameters() \n",
-    "\n",
-    "# --- Open the webcam ---\n",
-    "cap = cv2.VideoCapture(0)   # /dev/video0\n",
-    "\n",
-    "if not cap.isOpened():\n",
-    "    print(\"Could not open webcam\")\n",
-    "    exit()\n",
-    "\n",
-    "while True:\n",
-    "    ret, frame = cap.read() # fram is a numpy array of shape (height, width, 3) of type uint8 -> 0 to 255\n",
-    "    if not ret:\n",
-    "        print(\"Frame not received\")\n",
-    "        break\n",
-    "    # Convert to grayscale (Aruco works on grayscale)\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY) # gray is an array of shape (heigh, width, 1) type uint8\n",
-    "    # Detect markers\n",
-    "    corners, ids, _ = cv2.aruco.detectMarkers(gray, aruco_dict, parameters=aruco_params) \n",
-    "   \n",
-    "    # Draw a square using corners: bottom_right id0, bottom_left id1 top_left id2\n",
-    "    if ids is not None:\n",
-    "        ids_flat = ids.flatten()\n",
-    "        pts = {}\n",
-    "\n",
-    "        for idx, marker_id in enumerate(ids_flat):\n",
-    "            c = corners[idx][0]  # shape (4, 2): [tl, tr, br, bl]\n",
-    "            if marker_id == 0:\n",
-    "                # id0 at top-left of the map → inner corner = bottom-right\n",
-    "                pts[0] = c[2]  # br\n",
-    "            elif marker_id == 1:\n",
-    "                # id1 at top-right of the map → inner corner = bottom-left\n",
-    "                pts[1] = c[3]  # bl\n",
-    "            elif marker_id == 2:\n",
-    "                # id2 at bottom-right of the map → inner corner = top-left\n",
-    "                pts[2] = c[0]  # tl\n",
-    "\n",
-    "        # Draw boundary by connecting inner corners if all 3 are visible\n",
-    "        if all(k in pts for k in (0, 1, 2)):\n",
-    "            p0 = pts[0]\n",
-    "            p1 = pts[1]\n",
-    "            p2 = pts[2]\n",
-    "\n",
-    "            poly = np.array([p0, p1, p2], dtype=np.int32).reshape((-1, 1, 2))\n",
-    "            cv2.polylines(frame, [poly], isClosed=True, color=(0, 255, 0), thickness=2)\n",
-    "\n",
-    "    # Show the frame\n",
-    "    cv2.imshow(\"Aruco Feed\", frame)\n",
-    "\n",
-    "    # Quit with q \n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'): \n",
-    "        break\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()\n"
+    "pip install opencv-contrib-python\n",
+    "# pip install numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ef42bf23-c83c-4468-aec5-fa467b27ebd6",
    "metadata": {},
    "outputs": [],
@@ -85,6 +31,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "import math\n",
+    "\n",
+    "# ---------------- functions used for CV ----------------\n",
     "\n",
     "# Compute center of the ArUco marker \n",
     "def compute_center(top_left,bottom_right):\n",
@@ -156,24 +104,69 @@
     "    for verts in polygons_roi:\n",
     "        polygons_full.append(verts + offset)\n",
     "    \n",
-    "    return polygons_full, mask_roi"
+    "    return polygons_full, mask_roi\n",
+    "\n",
+    "# map a single image point (u,v) to world (X,Y)\n",
+    "def img_to_world(u,v,H):\n",
+    "    uv1 = np.array([u,v, 1.0], dtype=np.float32) # z = 1\n",
+    "    XY1 = H @ uv1\n",
+    "    XY1 /= XY1[2]  # scale back to world coordinates where z = 1\n",
+    "    return float(XY1[0]), float(XY1[1])\n",
+    "\n",
+    "# helper function to display text\n",
+    "def putText(frame, text, x, y):\n",
+    "    cv2.putText(frame,str(text),(int(x), int(y)),cv2.FONT_HERSHEY_SIMPLEX,0.5,(0, 255, 0),2)\n",
+    "    \n",
+    "# ---------------- constants used for CV ----------------\n",
+    "\n",
+    "# Real-world coordinates of the 8 corners of the aruco markers\n",
+    "# Order must match the corner order from ArUco: TL, TR, BR, BL.\n",
+    "# Top-left marker \n",
+    "pts_world_TL = np.array([\n",
+    "    [-6.5, -6.5],   # top-left\n",
+    "    [ 0.0, -6.5],   # top-right\n",
+    "    [ 0.0,  0.0],   # bottom-right\n",
+    "    [-6.5,  0.0],   # bottom-left\n",
+    "], dtype=np.float32)\n",
+    "\n",
+    "# Bottom-right marker\n",
+    "pts_world_BR = np.array([\n",
+    "    [44.0, 28.0],   # top-left\n",
+    "    [51.0, 28.0],   # top-right\n",
+    "    [51.0, 35.0],   # bottom-right\n",
+    "    [44.0, 35.0],   # bottom-left\n",
+    "], dtype=np.float32)\n",
+    "\n",
+    "pts_world = np.vstack([pts_world_TL, pts_world_BR])     # shape (8,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ef83fa32-a61c-4012-bcea-b2118dd66369",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@448.215] global cap_gstreamer.cpp:1173 isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "# --- ArUco dictionary (DICT_4X4_50) ---\n",
+    "# ---------------- Main CV implementation ----------------\n",
+    "\n",
+    "# ArUco dictionary (DICT_4X4_50) \n",
     "aruco_dict = cv2.aruco.getPredefinedDictionary(cv2.aruco.DICT_4X4_50)\n",
     "aruco_params = cv2.aruco.DetectorParameters() \n",
     "\n",
-    "# --- Open the webcam ---\n",
+    "# Open the webcam \n",
     "cap = cv2.VideoCapture(0)   # /dev/video0\n",
     "\n",
     "if not cap.isOpened():\n",
@@ -181,7 +174,7 @@
     "    exit()\n",
     "\n",
     "while True:\n",
-    "    ret, frame = cap.read() # fram is a numpy array of shape (height, width, 3) of type uint8 -> 0 to 255\n",
+    "    ret, frame = cap.read() # Frame is a numpy array of shape (height, width, 3) of type uint8 -> 0 to 255\n",
     "    if not ret:\n",
     "        print(\"Frame not received\")\n",
     "        break\n",
@@ -191,7 +184,8 @@
     "    corners, ids, _ = cv2.aruco.detectMarkers(gray, aruco_dict, parameters=aruco_params) \n",
     "    \n",
     "    marker0_TL = marker1_BR = marker2_thymio = marker3_goal = 0\n",
-    "    \n",
+    "\n",
+    "    # ---------------- Marker detection and map defintion  ----------------\n",
     "    if ids is not None and len(ids) >= 2:\n",
     "        ids_flat = ids.flatten()\n",
     "        \n",
@@ -208,34 +202,66 @@
     "        x0, y0 = corners[marker0_TL][0][2] # TL corner of map (2 = BR corner of marker0)\n",
     "        x1, y1 = corners[marker1_BR][0][0] # BR corner of map (0 = TL corner of mareker1)\n",
     "        \n",
-    "        # Four rectangle corners\n",
+    "        # Four corners of the map \n",
     "        p_tl = (int(x0), int(y0))  \n",
     "        p_br = (int(x1), int(y1))  \n",
     "        p_tr = (int(x1), int(y0))\n",
     "        p_bl = (int(x0), int(y1))\n",
+    "        \n",
+    "        # ---------------- Position/orientation of thymio and goal in image space ----------------\n",
+    "        thymio_x_img,thymio_y_img = compute_center(corners[marker2_thymio][0][0],corners[marker2_thymio][0][2]) \n",
+    "        goal_x_img,goal_y_img = compute_center(corners[marker3_goal][0][0],corners[marker3_goal][0][2])\n",
+    "        thymio_theta = compute_angle(corners[marker2_thymio][0][0],corners[marker2_thymio][0][3]) # TL,BL\n",
+    "            \n",
+    "        # ---------------- Homography: image -> world ----------------\n",
+    "        # Image/pixel coordinates of the 8 corners\n",
+    "        pts_img_TL = corners[marker0_TL][0].astype(np.float32)  # shape (4,2)\n",
+    "        pts_img_BR = corners[marker1_BR][0].astype(np.float32)  # shape (4,2)\n",
+    "        pts_img = np.vstack([pts_img_TL, pts_img_BR]).astype(np.float32)    # shape (8,2)\n",
     "\n",
+    "        # print(type(pts_img), pts_img.shape, pts_img.dtype) # DEBUG\n",
+    "        # print(type(pts_world), pts_world.shape, pts_world.dtype) # DEBUG\n",
+    "\n",
+    "        # Homography matrix (outliers = None since we use DLT)\n",
+    "        H, inliers = cv2.findHomography(pts_img, pts_world) # method=0: direct linear transform (DLT)\n",
+    "    \n",
+    "        # Compute position of thymio / goal / obstacles in real world (origin at top left corner of map)\n",
+    "        thymio_x, thymio_y = img_to_world(thymio_x_img, thymio_y_img, H)\n",
+    "        goal_x, goal_y = img_to_world(goal_x_img, goal_y_img, H)\n",
+    "    \n",
+    "\n",
+    "        # ---------------- Polygon vertices detection ----------------\n",
+    "        polygons, red_mask_roi = detect_red_polygons_in_map(frame, p_tl, p_br)\n",
+    "        \n",
+    "        # Map to real world positions\n",
+    "        for verts in polygons: # verts: (N,2) in image coords\n",
+    "            cnt = verts.reshape(-1, 1, 2).astype(np.float32) # cv2 uses (N,1,2) format\n",
+    "            cnt_world = cv2.perspectiveTransform(cnt, H)  # same thing as img_to_world but for 2D array\n",
+    "            verts_world = cnt_world.reshape(-1, 2)        # (N,2) world coords\n",
+    "                \n",
+    "        #  ---------------- Display ----------------\n",
+    "        \n",
+    "        # Draw virtual map \n",
     "        cv2.line(frame, p_tl, p_tr, (0, 255, 0), 2)\n",
     "        cv2.line(frame, p_tr, p_br,  (0, 255, 0), 2)\n",
     "        cv2.line(frame, p_br,  p_bl, (0, 255, 0), 2)\n",
     "        cv2.line(frame, p_bl, p_tl,  (0, 255, 0), 2)\n",
     "        \n",
-    "        cv2.aruco.drawDetectedMarkers(frame, corners, ids)\n",
-    "        thymio_x,thymio_y = compute_center(corners[marker2_thymio][0][0],corners[marker2_thymio][0][2]) # TL,BR\n",
-    "        goal_x,goal_y = compute_center(corners[marker3_goal][0][0],corners[marker3_goal][0][2]) # TL,BR\n",
-    "        #cv2.line(frame, p_tl, (int(thymio_x),int(thymio_y)), (0, 255, 0), 2) # TEST\n",
-    "        #cv2.line(frame, p_tl, (int(goal_x),int(goal_y)), (0, 255, 0), 2) # TEST\n",
-    "\n",
-    "        thymio_theta = compute_angle(corners[marker2_thymio][0][0],corners[marker2_thymio][0][3]) # TL,BL\n",
-    "        cv2.putText(frame, str(thymio_theta), (thymio_x,thymio_y),cv2.FONT_HERSHEY_SIMPLEX,0.5, (0, 255, 0), 2)\n",
-    "        # print(f\"x={thymio_x:.1f}, y={thymio_y:.1f}\") \n",
-    "\n",
-    "    # ------------------- POLYGON VERTICES DETECTION -----------------\n",
-    "    polygons, red_mask_roi = detect_red_polygons_in_map(frame, p_tl, p_br)\n",
-    "    for verts in polygons:\n",
-    "        cv2.polylines(frame, [verts], True, (255, 0, 255), 2)\n",
-    "        for (x, y) in verts:\n",
-    "            cv2.circle(frame, (int(x), int(y)), 4, (0, 0, 255), -1)\n",
-    "    # ---------------------------------------------------------------\n",
+    "        cv2.aruco.drawDetectedMarkers(frame, corners, ids) # TEST \n",
+    "        \n",
+    "        # Thymio position / angle \n",
+    "        cv2.putText(frame, str(round(thymio_theta,2)), (thymio_x_img,thymio_y_img),cv2.FONT_HERSHEY_SIMPLEX,0.5, (0, 255, 0), 2)\n",
+    "        putText(frame, f\"{thymio_theta:.2f}\", thymio_x_img, thymio_y_img)\n",
+    "        putText(frame, f\"({thymio_x:.2f}, {thymio_y:.2f})\", thymio_x_img, thymio_y_img + 15) # +15 to move a bit down\n",
+    "    \n",
+    "        # Goal and obstacles positions\n",
+    "        putText(frame, f\"({goal_x:.2f}, {goal_y:.2f})\", goal_x_img, goal_y_img)\n",
+    "    \n",
+    "        # Obstacles (polygon[i] = array of vertices of the i-th polygon)\n",
+    "        for verts in polygons:\n",
+    "            cv2.polylines(frame, [verts], True, (255, 0, 255), 2) # connects all vertices together to form polygon\n",
+    "            for (x, y) in verts:\n",
+    "                cv2.circle(frame, (int(x), int(y)), 4, (0, 0, 255), -1) # circle around each vertex of polygon\n",
     "\n",
     "    # Show the frame\n",
     "    cv2.imshow(\"Aruco Feed\", frame)\n",
