--- a/CV_test.ipynb
+++ b/CV_test.ipynb
@@ -179,6 +179,124 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "223685c7-7c95-4a30-ae81-63381dbba398",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# corners: output from cv2.aruco.detectMarkers\n",
+    "# marker0_TL, marker1_BR are the indices of the top-left and bottom-right markers\n",
+    "\n",
+    "# 1) Image (pixel) coordinates of the 8 corners\n",
+    "pts_img_TL = corners[marker0_TL][0].astype(np.float32)  # shape (4,2)\n",
+    "pts_img_BR = corners[marker1_BR][0].astype(np.float32)  # shape (4,2)\n",
+    "pts_img = np.vstack([pts_img_TL, pts_img_BR])           # shape (8,2)\n",
+    "\n",
+    "# 2) Real-world coordinates of the same 8 corners\n",
+    "#    Order must match the corner order from ArUco: top-left, top-right, bottom-right, bottom-left.\n",
+    "#    Top-left marker (you gave: (-6.5,-6.5), (-6.5,0), (0,0), (0,-6.5))\n",
+    "pts_world_TL = np.array([\n",
+    "    [-6.5, -6.5],   # top-left\n",
+    "    [ 0.0, -6.5],   # top-right\n",
+    "    [ 0.0,  0.0],   # bottom-right\n",
+    "    [-6.5,  0.0],   # bottom-left\n",
+    "], dtype=np.float32)\n",
+    "\n",
+    "#    Bottom-right marker (you gave: (44,28), (51,28), (44,35), (51,35))\n",
+    "pts_world_BR = np.array([\n",
+    "    [44.0, 28.0],   # top-left\n",
+    "    [51.0, 28.0],   # top-right\n",
+    "    [51.0, 35.0],   # bottom-right\n",
+    "    [44.0, 35.0],   # bottom-left\n",
+    "], dtype=np.float32)\n",
+    "\n",
+    "pts_world = np.vstack([pts_world_TL, pts_world_BR])     # shape (8,2)\n",
+    "\n",
+    "# 3) Compute homography: image -> world\n",
+    "H, inliers = cv2.findHomography(pts_img, pts_world, method=0)  # method=0: direct linear transform\n",
+    "\n",
+    "# 4) Helper: map a single image point (u,v) to world (X,Y)\n",
+    "def img_to_world(pt_uv, H):\n",
+    "    uv1 = np.array([pt_uv[0], pt_uv[1], 1.0], dtype=np.float32)\n",
+    "    XY1 = H @ uv1\n",
+    "    XY1 /= XY1[2]\n",
+    "    return float(XY1[0]), float(XY1[1])\n",
+    "\n",
+    "# Example usage:\n",
+    "# robot_center_img = (u, v) from your robot marker\n",
+    "# X_r, Y_r = img_to_world(robot_center_img, H)\n",
+    "\n",
+    "# for obstacles use \n",
+    "#cnt = contour.reshape(-1, 1, 2).astype(np.float32)   # (N,1,2)\n",
+    "#cnt_world = cv2.perspectiveTransform(cnt, H)         # (N,1,2) in real-world coord#s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1480b10c-a11f-469a-bba5-4783ec05463a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2, numpy as np\n",
+    "\n",
+    "print(\"cv2 module:\", cv2)\n",
+    "print(\"cv2 file:\", getattr(cv2, \"__file__\", \"no __file__\"))\n",
+    "print(\"cv2 version:\", cv2.__version__)\n",
+    "print(\"type(getPerspectiveTransform):\", type(cv2.getPerspectiveTransform))\n",
+    "\n",
+    "srcPoints = np.array([[100, 100],\n",
+    "                      [150, 100],\n",
+    "                      [150, 150],\n",
+    "                      [100, 150]], dtype=np.float32)\n",
+    "dstPoints = np.array([[200, 200],\n",
+    "                      [250, 200],\n",
+    "                      [250, 250],\n",
+    "                      [200, 250]], dtype=np.float32)\n",
+    "\n",
+    "print(\"src type/shape/dtype:\", type(srcPoints), srcPoints.shape, srcPoints.dtype)\n",
+    "print(\"dst type/shape/dtype:\", type(dstPoints), dstPoints.shape, dstPoints.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "af5b380c-3c84-4d64-878a-fc015148b446",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src type/shape/dtype: <class 'numpy.ndarray'> (4, 2) float32\n",
+      "dst type/shape/dtype: <class 'numpy.ndarray'> (4, 2) float32\n",
+      "Homography Matrix:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define source and destination points\n",
+    "srcPoints = np.array([[100, 100], [150, 100], [150, 150], [100, 150]], dtype=np.float32)\n",
+    "dstPoints = np.array([[200, 200], [250, 200], [250, 250], [200, 250]], dtype=np.float32)\n",
+    "\n",
+    "print(\"src type/shape/dtype:\", type(srcPoints), srcPoints.shape, srcPoints.dtype)\n",
+    "print(\"dst type/shape/dtype:\", type(dstPoints), dstPoints.shape, dstPoints.dtype)\n",
+    "# Compute homography matrix\n",
+    "H, mask = cv2.findHomography(srcPoints, dstPoints, cv2.RANSAC, 5.0)\n",
+    "\n",
+    "# Print the resulting homography matrix\n",
+    "print(\"Homography Matrix:\")\n",
+    "# print(H)"
+   ]
   }
  ],
  "metadata": {
