--- a/computer_vision/old_CV_aruco.ipynb
+++ b/computer_vision/old_CV_aruco.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ecedb05c-cfda-449e-b23d-076951f7ba86",
+   "execution_count": 1,
+   "id": "b21863ab-2a0e-4a2f-8857-a9e2ebe54280",
    "metadata": {},
    "outputs": [
     {
@@ -17,14 +17,13 @@
     }
    ],
    "source": [
-    "pip install opencv-contrib-python\n",
-    "# pip install numpy"
+    "pip install opencv-contrib-python # pip install numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ef42bf23-c83c-4468-aec5-fa467b27ebd6",
+   "execution_count": 2,
+   "id": "14c75edd-625a-413c-ac9a-0e26c8f62742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,17 +141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ef83fa32-a61c-4012-bcea-b2118dd66369",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "id": "55dce208-dc38-47a6-8876-575764c6299d",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@448.215] global cap_gstreamer.cpp:1173 isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n"
+      "[ WARN:0@568.025] global cap_gstreamer.cpp:1173 isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frame not received\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@767.115] global cap_v4l.cpp:889 requestBuffers VIDEOIO(V4L2:/dev/video0): failed VIDIOC_REQBUFS: errno=19 (No such device)\n"
      ]
     }
    ],
@@ -183,6 +194,7 @@
     "    # Detect markers\n",
     "    corners, ids, _ = cv2.aruco.detectMarkers(gray, aruco_dict, parameters=aruco_params) \n",
     "    \n",
+    "    #marker0_TL = marker1_TR = marker2_BR = mmarker3_BL = marker4_thymio = marker5_goal = 0\n",
     "    marker0_TL = marker1_BR = marker2_thymio = marker3_goal = 0\n",
     "\n",
     "    # ---------------- Marker detection and map defintion  ----------------\n",
@@ -272,6 +284,14 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1be75a2-2bb8-4b6e-b815-481128916b78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
