--- a/computer_vision/CV_aruco.ipynb
+++ b/computer_vision/CV_aruco.ipynb
@@ -3,26 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecedb05c-cfda-449e-b23d-076951f7ba86",
+   "id": "870b6ea3-a5ca-4799-969a-179ebca85fda",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-contrib-python in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.11/site-packages (4.12.0.88)\n",
-      "Requirement already satisfied: numpy<2.3.0,>=2 in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.11/site-packages (from opencv-contrib-python) (2.2.6)\n",
+      "Requirement already satisfied: opencv-contrib-python in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.9/site-packages (4.12.0.88)\n",
+      "Requirement already satisfied: numpy<2.3.0,>=2 in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.9/site-packages (from opencv-contrib-python) (2.0.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install opencv-contrib-python # pip install numpy"
+    "pip install opencv-contrib-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ef42bf23-c83c-4468-aec5-fa467b27ebd6",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@139.047] global cap_gstreamer.cpp:1173 isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n"
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
      ]
     }
    ],
@@ -205,21 +205,6 @@
     "    # ---------------- Marker detection and map definition ----------------\n",
     "    if len(ids) >= 6: # all markers must be detected\n",
     "        ids_flat = ids.flatten()\n",
-    "        # id_to_idx = {int(m_id): i for i, m_id in enumerate(ids_flat)}\n",
-    "        # required_ids = [0, 1, 2, 3, 4, 5]\n",
-    "        # if all(rid in id_to_idx for rid in required_ids):\n",
-    "        #     marker0_TL    = id_to_idx[0]\n",
-    "        #     marker1_TR    = id_to_idx[1]\n",
-    "        #     marker2_BR    = id_to_idx[2]\n",
-    "        #     marker3_BL    = id_to_idx[3]\n",
-    "        #     marker4_thymio = id_to_idx[4]\n",
-    "        #     marker5_goal   = id_to_idx[5]\n",
-    "        # else:\n",
-    "        #     # Not all required markers visible → skip mapping for this frame\n",
-    "        #     cv2.imshow(\"frame\", frame)\n",
-    "        #     if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        #         break\n",
-    "        #     continue\n",
     "        for i, marker_id in enumerate(ids_flat):\n",
     "            if marker_id == 0:\n",
     "                marker0_TL = i\n",
@@ -239,12 +224,6 @@
     "        tr_pt = corners[marker1_TR][0][3]  # BL of TR marker\n",
     "        br_pt = corners[marker2_BR][0][0]  # TL of BR marker\n",
     "        bl_pt = corners[marker3_BL][0][1]  # TR of BL marker\n",
-    "\n",
-    "        # Axis-aligned bounding box of the map region\n",
-    "        # xs = [tl_pt[0], tr_pt[0], br_pt[0], bl_pt[0]]\n",
-    "        # ys = [tl_pt[1], tr_pt[1], br_pt[1], bl_pt[1]]\n",
-    "        # x0, x1 = min(xs), max(xs)\n",
-    "        # y0, y1 = min(ys), max(ys)\n",
     "\n",
     "        # Four corners of the virtual map (axis aligned)\n",
     "        p_tl = (int(tl_pt[0]), int(tl_pt[1]))\n",
@@ -309,10 +288,10 @@
     "        # Goal position\n",
     "        putText(frame, f\"({goal_x:.2f}, {goal_y:.2f})\", goal_x_img, goal_y_img)\n",
     "\n",
-    "        # Obstacles (polygon[i] = array of vertices of the i-th polygon)\n",
+    "        # polygons is a Python list of NumPy arrays\n",
     "        for verts in polygons:\n",
     "            cv2.polylines(frame, [verts], True, (255, 0, 255), 2)  # connect vertices\n",
-    "            for (x, y) in verts:\n",
+    "            for (x, y) in verts: #  verts is (N,2) where N is the number of vertices in a polygon\n",
     "                cv2.circle(frame, (int(x), int(y)), 4, (0, 0, 255), -1)  # circle at each vertex\n",
     "\n",
     "    # Show the frame\n",
@@ -342,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
