--- a/computer_vision/CV_aruco.ipynb
+++ b/computer_vision/CV_aruco.ipynb
@@ -11,7 +11,15 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: opencv-contrib-python in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.9/site-packages (4.12.0.88)\n",
-      "Requirement already satisfied: numpy<2.3.0,>=2 in /home/itti_jammy/miniconda3/envs/bomr/lib/python3.9/site-packages (from opencv-contrib-python) (2.0.2)\n",
+      "Collecting numpy<2.3.0,>=2 (from opencv-contrib-python)\n",
+      "  Using cached numpy-2.0.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (60 kB)\n",
+      "Using cached numpy-2.0.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (19.5 MB)\n",
+      "Installing collected packages: numpy\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 1.19.2\n",
+      "    Uninstalling numpy-1.19.2:\n",
+      "      Successfully uninstalled numpy-1.19.2\n",
+      "Successfully installed numpy-2.0.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ef42bf23-c83c-4468-aec5-fa467b27ebd6",
    "metadata": {},
    "outputs": [],
@@ -157,17 +165,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ef83fa32-a61c-4012-bcea-b2118dd66369",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not open webcam\n",
+      "Frame not received\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+      "[ WARN:0@2.423] global cap_v4l.cpp:914 open VIDEOIO(V4L2:/dev/video0): can't open camera by index\n",
+      "[ERROR:0@2.424] global obsensor_uvc_stream_channel.cpp:163 getStreamChannelGroup Camera index out of range\n"
      ]
     }
    ],
